close player sources tag
git-svn-id: http://www.kaltura.org/kalorg/html5video/trunk/mwEmbed@1940 b58a29cf-3064-46da-94c6-1c29cc75c8e5

--- a/modules/EmbedPlayer/tests/Player_Sources.html
+++ b/modules/EmbedPlayer/tests/Player_Sources.html
@@ -10,9 +10,9 @@
 <video id="vid1" width="480" height="267"
 	 poster="http://cdn.kaltura.org/apis/html5lib/kplayer-examples/media/bbb480.jpg"
 	 durationHint="33"
-	 controls>
-		<source "video/h264" src="http://cdn.kaltura.org/apis/html5lib/kplayer-examples/media/bbb_trailer_iphone.m4v">
-		<source type="video/ogg" src="http://www.linkto.tv/test/big_buck_bunny.ogv" >
+	 controls >
+		<source "video/h264" src="http://cdn.kaltura.org/apis/html5lib/kplayer-examples/media/bbb_trailer_iphone.m4v"/>
+		<source type="video/ogg" src="http://www.linkto.tv/test/big_buck_bunny.ogv" />
 </video>
 
 <script type="text/javascript">
