--- a/modules/EmbedPlayer/tests/Player_Sources.html
+++ b/modules/EmbedPlayer/tests/Player_Sources.html
@@ -11,8 +11,8 @@
 	 poster="http://cdn.kaltura.org/apis/html5lib/kplayer-examples/media/bbb480.jpg"
 	 durationHint="33"
 	 controls >
-		<source type="video/h264" src="http://cdn.kaltura.org/apis/html5lib/kplayer-examples/media/bbb_trailer_iphone.m4v"/>
-		<source type="video/ogg" src="http://www.linkto.tv/test/big_buck_bunny.ogv" />
+		<source type="video/h264" src="http://cdn.kaltura.org/apis/html5lib/kplayer-examples/media/bbb_trailer_iphone.m4v"></source>
+		<source type="video/ogg" src="http://www.linkto.tv/test/big_buck_bunny.ogv"></source>
 </video>
 
 <script type="text/javascript">
