--- a/modules/EmbedPlayer/tests/Player_Sources.html
+++ b/modules/EmbedPlayer/tests/Player_Sources.html
@@ -3,7 +3,8 @@
 <head>
 <title>Player sources</title>
 
-<script type="text/javascript" src="../../../mwEmbedLoader.php"></script>
+<!-- <script type="text/javascript" src="../../../mwEmbedLoader.php"></script>  -->
+<script type="text/javascript" src="http://html5.kaltura.org/js"></script>
 </head>
 <body>
 
