more IE9 mode checks
git-svn-id: http://www.kaltura.org/kalorg/html5video/trunk/mwEmbed@1946 b58a29cf-3064-46da-94c6-1c29cc75c8e5

--- a/modules/EmbedPlayer/tests/Player_Sources.html
+++ b/modules/EmbedPlayer/tests/Player_Sources.html
@@ -5,6 +5,10 @@
 
 <!-- <script type="text/javascript" src="../../../mwEmbedLoader.php"></script>  -->
 <script type="text/javascript" src="http://html5.kaltura.org/js"></script>
+
+<meta http-equiv="X-UA-Compatible" content="IE=9"/>
+<meta http-equiv="Content-Type" content="text/html;charset=utf-8" />
+
 </head>
 <body>
 
