--- a/modules/EmbedPlayer/tests/Player_Sources.html
+++ b/modules/EmbedPlayer/tests/Player_Sources.html
@@ -3,8 +3,8 @@
 <head>
 <title>Player sources</title>
 
-<!-- <script type="text/javascript" src="../../../mwEmbedLoader.php"></script>  -->
-<script type="text/javascript" src="http://html5.kaltura.org/js"></script>
+ <script type="text/javascript" src="../../../mwEmbedLoader.php"></script>  
+<!-- <script type="text/javascript" src="http://html5.kaltura.org/js"></script>-->
 
 <meta http-equiv="X-UA-Compatible" content="IE=9"/>
 <meta http-equiv="Content-Type" content="text/html;charset=utf-8" />
@@ -17,26 +17,8 @@
 	 durationHint="33"
 	 controls >
 		<source type="video/h264" src="http://cdn.kaltura.org/apis/html5lib/kplayer-examples/media/bbb_trailer_iphone.m4v"></source>
-		<source type="video/ogg" src="http://www.linkto.tv/test/big_buck_bunny.ogv"></source>
+		<source type="video/ogg" src="http://cdn.kaltura.org/apis/html5lib/kplayer-examples/media/bbb_trailer_400p.ogv"></source>
 </video>
 
-<script type="text/javascript">
-	mw.setConfig('EmbedPlayer.EnableIpadHTMLControls', true);
-	mw.setConfig('EmbedPlayer.OverlayControls', false);
-	mw.setConfig('EmbedPlayer.MonitorRate', 50);
-
-	mw.ready(function(){
-		var embedPlayer = $j('#vid1').get(0);
-		
-		$j( embedPlayer ).bind( 'play', function(){
-			alert('play');
- 		});
-
- 		$j( embedPlayer ).bind( 'pause', function(){
- 			alert('pause');
- 		});
- 		
-	});
-</script>
 </body>
 </html>
