improved customUIConf support for resource injection fixed addJsListner when used on server side of iframe reorganized test files for CustomUiConf
git-svn-id: http://www.kaltura.org/kalorg/html5video/trunk/mwEmbed@1995 b58a29cf-3064-46da-94c6-1c29cc75c8e5

--- a/modules/KalturaSupport/tests/CustomUiConf/CustomUiConf.html
+++ b/modules/KalturaSupport/tests/CustomUiConf/CustomUiConf.html
@@ -1,19 +1,20 @@
 <html>
 <head>
 <title>KMC based configuration</title>
-<script type="text/javascript" src="../../../mwEmbedLoader.php"></script>
+<script type="text/javascript" src="../../../../mwEmbedLoader.php"></script>
 </head>
 <body>
 <h2> KMC based configuration</h2>
 <a href="?forceMobileHTML5"> Force Mobile HTML5</a> for testing with desktop chrome and safari.
 <br />
 <br />
-Here we have some custom vars in the kmc that sets <br></br>
-<i>EmbedPlayer.AttributionButton</i> to <i>false</i>  <br></br> 
-<i>EmbedPlayer.EnableOptionsMenu</i> to <i>false</i>  <br></br> 
+Here we have some custom vars in the kmc that sets <br>
+<i>EmbedPlayer.AttributionButton</i> to <i>false</i>  <br>
+<i>EmbedPlayer.EnableOptionsMenu</i> to <i>false</i>  <br>
 <i>jQueryUISkin</i> to <i>'redmond'</i> <br></br>
+<i>HTML5PluginUrl</i> set to <a href="test.js">this file</a> ( logs some events to console.log )<br>
+<i>HTML5PlayerCssUrl</i> set to <a href="test.css">this file</a> ( moves the play button to the right )<br>
 
-</br> It should be noted that not all custom variables can be set via the KMC. </br> 
 <object id="kaltura_player_1305844736" name="kaltura_player_1305844736" type="application/x-shockwave-flash" allowFullScreen="true" allowNetworking="all" allowScriptAccess="always" height="330" width="400" bgcolor="#000000" xmlns:dc="http://purl.org/dc/terms/" xmlns:media="http://search.yahoo.com/searchmonkey/media/" rel="media:video" resource="http://www.kaltura.com/index.php/kwidget/cache_st/1305844736/wid/_243342/uiconf_id/4616572/entry_id/0_uka1msg4" data="http://www.kaltura.com/index.php/kwidget/cache_st/1305844736/wid/_243342/uiconf_id/4616572/entry_id/0_uka1msg4"><param name="allowFullScreen" value="true" /><param name="allowNetworking" value="all" /><param name="allowScriptAccess" value="always" /><param name="bgcolor" value="#000000" /><param name="flashVars" value="&" /><param name="movie" value="http://www.kaltura.com/index.php/kwidget/cache_st/1305844736/wid/_243342/uiconf_id/4616572/entry_id/0_uka1msg4" /><a href="http://corp.kaltura.com">video platform</a> <a href="http://corp.kaltura.com/video_platform/video_management">video management</a> <a href="http://corp.kaltura.com/solutions/video_solution">video solutions</a> <a href="http://corp.kaltura.com/video_platform/video_publishing">video player</a> <a rel="media:thumbnail" href="http://cdnbakmi.kaltura.com/p/243342/sp/24334200/thumbnail/entry_id/0_uka1msg4/width/120/height/90/bgcolor/000000/type/2"></a> <span property="dc:description" content="test folgers coffe"></span><span property="media:title" content="FolgersCoffe.mpeg"></span> <span property="media:width" content="400"></span><span property="media:height" content="330"></span> <span property="media:type" content="application/x-shockwave-flash"></span> </object>
 </body>
 </html>
