--- a/modules/KalturaSupport/tests/SWFObject_2.2.html
+++ b/modules/KalturaSupport/tests/SWFObject_2.2.html
@@ -10,13 +10,13 @@
 <br />
 <div id="videoPlayerTarget"></div>
 <script type="text/javascript">
+	var urlPath = window.location.href.split("SWFObject_2.2.html")[0];
 	mw.setConfig( 'jQueryUISkin', 'darkness');
-	
 	mw.setConfig( 'EmbedPlayer.AttributionButton', {
 		'title' : 'Test Attribution Button',
 	 	'href' : 'http://www.google.com',
-		// An icon image url ( should be a 12x12 image url or data url )
-		'iconurl' : 'data:image/gif;base64,R0lGODlhEAAOALMAAOazToeHh0tLS/7LZv/0jvb29t/f3//Ub//ge8WSLf/rhf/3kdbW1mxsbP//mf///yH5BAAAAAAALAAAAAAQAA4AAARe8L1Ekyky67QZ1hLnjM5UUde0ECwLJoExKcppV0aCcGCmTIHEIUEqjgaORCMxIC6e0CcguWw6aFjsVMkkIr7g77ZKPJjPZqIyd7sJAgVGoEGv2xsBxqNgYPj/gAwXEQA7'
+		// An icon image url ( should be a 16x16 image url or data url )
+		'iconurl' : urlPath + 'test_folder_16x16.png'
 	});
 		
 	// Embed video-player
