--- a/tests/qunit/EmbedPlayerLoads.html
+++ b/tests/qunit/EmbedPlayerLoads.html
@@ -1,39 +1,23 @@
 <!DOCTYPE HTML PUBLIC "-//W3C//DTD HTML 4.01 Transitional//EN" 
                     "http://www.w3.org/TR/html4/loose.dtd">
 <html>
-  
 <head>
-
-  <link rel="stylesheet" href="http://code.jquery.com/qunit/git/qunit.css" type="text/css" media="screen" />
-
-  <script src="../../mwEmbedLoader.php"></script>
   <script src="http://code.jquery.com/jquery-latest.js"></script>
+  <link rel="stylesheet" href="http://code.jquery.com/qunit/git/qunit.css" type="text/css" media="screen" />
   <script type="text/javascript" src="http://code.jquery.com/qunit/git/qunit.js"></script>
   <script type="text/javascript" src="http://staging.html5video.org/testswarm/js/inject.js"></script>
 
-</head>
-
-<body>
-
-  <video id="vid1" width="480" height="267"
-     poster="http://cdn.kaltura.org/apis/html5lib/kplayer-examples/media/bbb480.jpg"
-     durationHint="33"
-     controls>
-      <source "video/h264" src="http://cdn.kaltura.org/apis/html5lib/kplayer-examples/media/bbb_trailer_iphone.m4v">
-      <source type="video/ogg" src="http://www.linkto.tv/test/big_buck_bunny.ogv" >
-  </video>
-
-  <h1 id="qunit-header">Embed Player Plays Test Case</h1>
-  <h2 id="qunit-banner"></h2>
-  <div id="qunit-testrunner-toolbar"></div>
-  <h2 id="qunit-userAgent"></h2>
-  <ol id="qunit-tests"></ol>
-  <div id="qunit-fixture">test markup, will be hidden</div>
-
   <script>
-  QUnit.config.autostart = false;
   
+  var $$ = jQuery.noConflict(true);
+  var $ = jQuery = null; //we will be using the normal jquery vars soon
+  var mw = null; // we will be grabbing the mw from the iframe
+
+  var testLocation = "../../modules/EmbedPlayer/tests/Player_Sources.html";
+
   var playbackStarted = false;
+
+  QUnit.config.autostart = false;
 
   function runTests() {
     module("Embed Player Loads");
@@ -45,8 +29,8 @@
       test("embed player is skinned", function() {
         ok( $('.play-btn-large') );
       });
-    
-    module("Embed Player Plays");
+
+	module("Embed Player Plays");
 
       test("play button clicked", function() {
         stop();
@@ -70,11 +54,37 @@
 
   }
 
-  mw.ready(function(){
-    QUnit.start();
-    runTests();
+  $$(document).ready(function(){
+
+    $$('#testFrame').load(function () {
+      //grab jQuery from inside the document - I don't 
+	  $ = jQuery = window.frames[0].$j;
+	  mw = window.frames[0].mw;
+		mw.ready(function(){
+			QUnit.start();
+			runTests();
+		});
+    });
+
+
+    $$('#testFrame').attr('src', testLocation)
+
+    // wait 10 seconds
+    //setTimeout( runTests, 10000 );
   });
 
   </script>
+  
+</head>
+<body>
+  <h1 id="qunit-header">QUnit example</h1>
+ <h2 id="qunit-banner"></h2>
+ <div id="qunit-testrunner-toolbar"></div>
+ <h2 id="qunit-userAgent"></h2>
+ <ol id="qunit-tests"></ol>
+ <div id="qunit-fixture">test markup, will be hidden</div>
+<div style="float: left"> 
+        <iframe height="700" width="1000" id="testFrame"></iframe> 
+</div> 
 </body>
 </html>
