--- a/tests/qunit/EmbedPlayerLoads.html
+++ b/tests/qunit/EmbedPlayerLoads.html
@@ -1,90 +1,84 @@
-<!DOCTYPE HTML PUBLIC "-//W3C//DTD HTML 4.01 Transitional//EN" 
-                    "http://www.w3.org/TR/html4/loose.dtd">
+<!DOCTYPE HTML>
 <html>
 <head>
-  <script src="http://code.jquery.com/jquery-latest.js"></script>
-  <link rel="stylesheet" href="http://code.jquery.com/qunit/git/qunit.css" type="text/css" media="screen" />
-  <script type="text/javascript" src="http://code.jquery.com/qunit/git/qunit.js"></script>
-  <script type="text/javascript" src="http://staging.html5video.org/testswarm/js/inject.js"></script>
+	
+	<link rel="stylesheet" href="http://code.jquery.com/qunit/git/qunit.css" type="text/css" media="screen" />
 
-  <script>
-  
-  var $$ = jQuery.noConflict(true);
-  var $ = jQuery = null; //we will be using the normal jquery vars soon
-  var mw = null; // we will be grabbing the mw from the iframe
+	<script src="http://code.jquery.com/jquery-latest.js"></script>
+	<script type="text/javascript" src="http://code.jquery.com/qunit/git/qunit.js"></script>
+	<script type="text/javascript" src="http://staging.html5video.org/testswarm/js/inject.js"></script>
 
-  var testLocation = "../../modules/EmbedPlayer/tests/Player_Sources.html";
+<script>
 
-  var playbackStarted = false;
+var $$ = jQuery.noConflict(true);
+var $ = jQuery = null; // will always run the tested page's jquery from $
+var mw = null; // we will be grabbing the mw from the iframe
 
-  QUnit.config.autostart = false;
+var testLocation = "../../modules/EmbedPlayer/tests/Player_Sources.html";
 
-  function runTests() {
-    module("Embed Player Loads");
+var playbackStarted = false;
 
-      test("embed player is embedded", function() {
-        ok( $('.mv-player', '.mwplayer_interface' ) );
-      });
+QUnit.config.autostart = false;
 
-      test("embed player is skinned", function() {
-        ok( $('.play-btn-large') );
-      });
+function runTests() {
+
+	module("Embed Player Loads");
+
+		test("embed player is embedded", function() {
+			ok( $('.mv-player', '.mwplayer_interface' ) );
+		});
+
+		test("embed player is skinned", function() {
+			ok( $('.play-btn-large') );
+		});
 
 	module("Embed Player Plays");
 
-      test("play button clicked", function() {
-        stop();
-        setTimeout( function()
-          { 
-            var player = $('#vid1').get(0);
-            $( player ).bind( 'play', function(){ playbackStarted = true });
-            ok( $('.play-btn-large').click() );
-            start();
-          }, 5000);
-      });
+		asyncTest("play button clicked", function() {
+			setTimeout( function()
+			{ 
+				var player = $('#vid1').get(0);
+				$( player ).bind( 'play', function(){ playbackStarted = true });
+				ok( $('.play-btn-large').click() );
+				start();
+			}, 5000);
+		});
 
-      asyncTest("playback began", function() {
-        //stop();
-        setTimeout( function()
-          { 
-            ok( playbackStarted == true );
-            start();
-          }, 10000);
-      });
+		asyncTest("playback began", function() {
+			setTimeout( function()
+			{ 
+				ok( playbackStarted == true );
+				start();
+			}, 10000);
+		});
+}
 
-  }
+$$(window).load(function(){
 
-  $$(document).ready(function(){
-
-    $$('#testFrame').load(function () {
-      //grab jQuery from inside the document - I don't 
-	  $ = jQuery = window.frames[0].$j;
-	  mw = window.frames[0].mw;
+	$$('#testFrame').attr('src', testLocation)
+	
+	$$('#testFrame').load(function () {
+		mw = window.frames[0].mw;
 		mw.ready(function(){
+			//grab jQuery from inside the document
+			$ = jQuery = window.frames[0].$j;
 			QUnit.start();
 			runTests();
 		});
-    });
+	});
+});
 
-
-    $$('#testFrame').attr('src', testLocation)
-
-    // wait 10 seconds
-    //setTimeout( runTests, 10000 );
-  });
-
-  </script>
-  
+</script>
 </head>
 <body>
-  <h1 id="qunit-header">QUnit example</h1>
- <h2 id="qunit-banner"></h2>
- <div id="qunit-testrunner-toolbar"></div>
- <h2 id="qunit-userAgent"></h2>
- <ol id="qunit-tests"></ol>
- <div id="qunit-fixture">test markup, will be hidden</div>
-<div style="float: left"> 
-        <iframe height="700" width="1000" id="testFrame"></iframe> 
-</div> 
+	<h1 id="qunit-header">QUnit example</h1>
+	<h2 id="qunit-banner"></h2>
+	<div id="qunit-testrunner-toolbar"></div>
+	<h2 id="qunit-userAgent"></h2>
+	<ol id="qunit-tests"></ol>
+	<div id="qunit-fixture">test markup, will be hidden</div>
+	<div style="float: left"> 
+		<iframe height="700" width="1000" id="testFrame"></iframe> 
+	</div> 
 </body>
 </html>
