updating entry id
git-svn-id: http://www.kaltura.org/kalorg/html5video/trunk/mwEmbed@2028 b58a29cf-3064-46da-94c6-1c29cc75c8e5

--- a/tests/test_files/mwEmbed_Kaltura_CE.html
+++ b/tests/test_files/mwEmbed_Kaltura_CE.html
@@ -41,7 +41,7 @@
                   'height' : 270
                   })
                 .attr({
-                  'kentryid' : "0_qv4psei4", //galleryClips[videoId].entryId,
+                  'kentryid' : "0_f0hymqet", //galleryClips[videoId].entryId,
                   'kwidgetid' : "_100", //kWidgetId,
                   'kpartnerid' : "100" //kPartnerId
                   })
