--- a/tests/qunit/EmbedPlayerLoadsCopy.html
+++ b/tests/qunit/EmbedPlayerLoadsCopy.html
@@ -1,80 +1,84 @@
-<!DOCTYPE HTML PUBLIC "-//W3C//DTD HTML 4.01 Transitional//EN" 
-                    "http://www.w3.org/TR/html4/loose.dtd">
+<!DOCTYPE HTML>
 <html>
-  
 <head>
+	
+	<link rel="stylesheet" href="http://code.jquery.com/qunit/git/qunit.css" type="text/css" media="screen" />
 
-  <link rel="stylesheet" href="http://code.jquery.com/qunit/git/qunit.css" type="text/css" media="screen" />
+	<script src="http://code.jquery.com/jquery-latest.js"></script>
+	<script type="text/javascript" src="http://code.jquery.com/qunit/git/qunit.js"></script>
+	<script type="text/javascript" src="http://staging.html5video.org/testswarm/js/inject.js"></script>
 
-  <script src="../../mwEmbedLoader.php"></script>
-  <script src="http://code.jquery.com/jquery-latest.js"></script>
-  <script type="text/javascript" src="http://code.jquery.com/qunit/git/qunit.js"></script>
-  <script type="text/javascript" src="http://staging.html5video.org/testswarm/js/inject.js"></script>
+<script>
 
+var $$ = jQuery.noConflict(true);
+var $ = jQuery = null; // will always run the tested page's jquery from $
+var mw = null; // we will be grabbing the mw from the iframe
+
+var testLocation = "../../modules/EmbedPlayer/tests/Player_Sources.html";
+
+var playbackStarted = false;
+
+QUnit.config.autostart = false;
+
+function runTests() {
+
+	module("Embed Player Loads");
+
+		test("embed player is embedded", function() {
+			ok( $('.mv-player', '.mwplayer_interface' ) );
+		});
+
+		test("embed player is skinned", function() {
+			ok( $('.play-btn-large') );
+		});
+
+	module("Embed Player Plays");
+
+		asyncTest("play button clicked", function() {
+			setTimeout( function()
+			{ 
+				var player = $('#vid1').get(0);
+				$( player ).bind( 'play', function(){ playbackStarted = true });
+				ok( $('.play-btn-large').click() );
+				start();
+			}, 5000);
+		});
+
+		asyncTest("playback began", function() {
+			setTimeout( function()
+			{ 
+				ok( playbackStarted == true );
+				start();
+			}, 10000);
+		});
+}
+
+
+$$(document).ready(function(){
+	$$(document.body).prepend('<iframe name="testFrame" id="testFrame" src="'+testLocation+'" width="100%" height="300px" border="none">');
+	//autoResize('testFrame');
+	
+	$$('#testFrame').load(function () {
+		setTimeout( function(){
+			mw = window.frames["testFrame"].mw;
+			mw.ready(function(){
+				//grab jQuery from inside the document
+				$ = jQuery = window.frames["testFrame"].$j;
+				QUnit.start();
+				runTests();
+			});
+		}, 5000);
+	});
+});
+
+</script>
 </head>
-
 <body>
-
-  <video id="vid1" width="480" height="267"
-     poster="http://cdn.kaltura.org/apis/html5lib/kplayer-examples/media/bbb480.jpg"
-     durationHint="33"
-     controls>
-      <source "video/h264" src="http://cdn.kaltura.org/apis/html5lib/kplayer-examples/media/bbb_trailer_iphone.m4v">
-      <source type="video/ogg" src="http://www.linkto.tv/test/big_buck_bunny.ogv" >
-  </video>
-
-  <h1 id="qunit-header">Embed Player Plays Test Case</h1>
-  <h2 id="qunit-banner"></h2>
-  <div id="qunit-testrunner-toolbar"></div>
-  <h2 id="qunit-userAgent"></h2>
-  <ol id="qunit-tests"></ol>
-  <div id="qunit-fixture">test markup, will be hidden</div>
-
-  <script>
-  QUnit.config.autostart = false;
-  
-  var playbackStarted = false;
-
-  function runTests() {
-    module("Embed Player Loads");
-
-      test("embed player is embedded", function() {
-        ok( $('.mv-player', '.mwplayer_interface' ) );
-      });
-
-      test("embed player is skinned", function() {
-        ok( $('.play-btn-large') );
-      });
-    
-    module("Embed Player Plays");
-
-      test("play button clicked", function() {
-        stop();
-        setTimeout( function()
-          { 
-            var player = $('#vid1').get(0);
-            $( player ).bind( 'play', function(){ playbackStarted = true });
-            ok( $('.play-btn-large').click() );
-            start();
-          }, 5000);
-      });
-
-      asyncTest("playback began", function() {
-        //stop();
-        setTimeout( function()
-          { 
-            ok( playbackStarted == true );
-            start();
-          }, 10000);
-      });
-
-  }
-
-  mw.ready(function(){
-    QUnit.start();
-    runTests();
-  });
-
-  </script>
+	<h1 id="qunit-header">QUnit example</h1>
+	<h2 id="qunit-banner"></h2>
+	<div id="qunit-testrunner-toolbar"></div>
+	<h2 id="qunit-userAgent"></h2>
+	<ol id="qunit-tests"></ol>
+	<div id="qunit-fixture">test markup, will be hidden</div>
 </body>
 </html>
