--- a/tests/qunit/EmbedSources-plusShim.html
+++ b/tests/qunit/EmbedSources-plusShim.html
@@ -3,7 +3,9 @@
 <head>
 	
 	<link rel="stylesheet" href="http://code.jquery.com/qunit/git/qunit.css" type="text/css" media="screen" />
-
+	<!--[if lt IE 9]>
+	<script src="http://html5shim.googlecode.com/svn/trunk/html5.js"></script>
+	<![endif]-->
 	<script src="http://code.jquery.com/jquery-latest.js"></script>
 	<script type="text/javascript" src="http://code.jquery.com/qunit/git/qunit.js"></script>
 	<script type="text/javascript" src="http://staging.html5video.org/testswarm/js/inject.js"></script>
