--- a/tests/qunit/EmbedSources-plusShim.html
+++ b/tests/qunit/EmbedSources-plusShim.html
@@ -29,7 +29,7 @@ $(document).ready(function(){
 </script>
 </head>
 <body>
-	<h1 id="qunit-header">QUnit example</h1>
+	<h1 id="qunit-header">Embed Player Sources (shimmed)</h1>
 	<h2 id="qunit-banner"></h2>
 	<div id="qunit-testrunner-toolbar"></div>
 	<h2 id="qunit-userAgent"></h2>
