--- a/tests/qunit/EmbedSources.html
+++ b/tests/qunit/EmbedSources.html
@@ -27,7 +27,7 @@ $(document).ready(function(){
 </script>
 </head>
 <body>
-	<h1 id="qunit-header">QUnit example</h1>
+	<h1 id="qunit-header">Embed Player Sources</h1>
 	<h2 id="qunit-banner"></h2>
 	<div id="qunit-testrunner-toolbar"></div>
 	<h2 id="qunit-userAgent"></h2>
