fixed bumper loading issue, by update to attribute property access confirm the flashvars argument is an array before foreach updated source paths in internet archive sample page
git-svn-id: http://www.kaltura.org/kalorg/html5video/trunk/mwEmbed@2106 b58a29cf-3064-46da-94c6-1c29cc75c8e5

--- a/modules/InternetArchiveSupport/tests/SampleArchivePage.html
+++ b/modules/InternetArchiveSupport/tests/SampleArchivePage.html
@@ -277,8 +277,8 @@
            durationHint="16.76" id="mwplayer">
 
       
-             <source src="http://www-tracey.archive.org/download/drake_saga1_shots/MVI_3983_512kb.mp4" URLTimeEncoding="true"http://www-tracey.archive.org/>
-              <source src="http://www-tracey.archive.org/download/drake_saga1_shots/MVI_3983.ogv" URLTimeEncoding="true"http://www-tracey.archive.org/>
+             <source src="http://www-tracey.archive.org/download/drake_saga1_shots/MVI_3983_512kb.mp4" URLTimeEncoding="true" />
+              <source src="http://www-tracey.archive.org/download/drake_saga1_shots/MVI_3983.ogv" URLTimeEncoding="true" />
                   </video>
         
           </div>
@@ -287,7 +287,7 @@
                 <tr onclick="return mw.IA.playClipMW(0)"
             class="odd">
           <td class="c1">
-            1 <img style="visibility:visible;" src="http://www-tracey.archive.org/images/orange_arrow.gif"http://www-tracey.archive.org/>
+            1 <img style="visibility:visible;" src="http://www-tracey.archive.org/images/orange_arrow.gif" />
 
           </td>
           <td>MVI_3983</td>
@@ -295,7 +295,7 @@
                 <tr onclick="return mw.IA.playClipMW(1)"
             class="eve">
           <td class="c1">
-            2 <img  src="http://www-tracey.archive.org/images/orange_arrow.gif"http://www-tracey.archive.org/>
+            2 <img  src="http://www-tracey.archive.org/images/orange_arrow.gif" />
           </td>
           <td>MVI_3984</td>
 
@@ -303,7 +303,7 @@
                 <tr onclick="return mw.IA.playClipMW(2)"
             class="odd">
           <td class="c1">
-            3 <img  src="http://www-tracey.archive.org/images/orange_arrow.gif"http://www-tracey.archive.org/>
+            3 <img  src="http://www-tracey.archive.org/images/orange_arrow.gif" />
           </td>
           <td>MVI_3985</td>
         </tr>
@@ -311,7 +311,7 @@
             class="eve">
 
           <td class="c1">
-            4 <img  src="http://www-tracey.archive.org/images/orange_arrow.gif"http://www-tracey.archive.org/>
+            4 <img  src="http://www-tracey.archive.org/images/orange_arrow.gif" />
           </td>
           <td>MVI_3986</td>
         </tr>
