initial "box model" emulation for playlist item layout
git-svn-id: http://www.kaltura.org/kalorg/html5video/trunk/mwEmbed@2121 b58a29cf-3064-46da-94c6-1c29cc75c8e5

--- a/modules/KalturaSupport/tests/PlaylistFallForward.html
+++ b/modules/KalturaSupport/tests/PlaylistFallForward.html
@@ -12,7 +12,7 @@
 </head>
 <body>
 <h2> Fall forward playlist </h2>
-<a href="?forceMobileHTML5"> Force Mobile Safari</a> for testing with desktop chrome and safari.
+<a href="?forceMobileHTML5"> Force HTML5</a> for testing with desktop chrome and safari.
 <br />
 
 <p>Multiple Playlists</p>
@@ -20,7 +20,7 @@
 allowFullScreen="true" allowNetworking="all" allowScriptAccess="always" height="330" width="740" 
 bgcolor="#000000" xmlns:dc="http://purl.org/dc/terms/" xmlns:media="http://search.yahoo.com/searchmonkey/media/" 
 rel="media:video" resource="http://www.kaltura.com/index.php/kwidget/cache_st/1306453574/wid/_243342/uiconf_id/4690912" 
-data="http://www.kaltura.com/index.php/kwidget/cache_st/1306453574/wid/_243342/uiconf_id/4690912">
+data="http://www.kaltura.com/index.php/kwidget/cache_st/130645357/wid/_243342/uiconf_id/4690912">
 <param name="allowFullScreen" value="true" /><param name="allowNetworking" value="all" />
 <param name="allowScriptAccess" value="always" /><param name="bgcolor" value="#000000" />
 <param name="flashVars" value="&" />
