--- a/modules/KalturaSupport/tests/PlaylistKalturaMRSS.html
+++ b/modules/KalturaSupport/tests/PlaylistKalturaMRSS.html
@@ -9,7 +9,7 @@
               <div id='kplayer'></div>
        </div>
       <script type="text/javascript" src="http://ajax.googleapis.com/ajax/libs/swfobject/2.2/swfobject.js"></script>
-      <script src="http://html5.kaltura.org/js" type="text/javascript"></script>
+      <script src="../../../mwEmbedLoader.php" type="text/javascript"></script>
       <script>
         //<![CDATA[
        	 var urlPath = window.location.href.split("PlaylistKalturaMRSS.html")[0];
