--- a/tests/test_files/canPlayType.html
+++ b/tests/test_files/canPlayType.html
@@ -3,6 +3,7 @@
   <head>
     <title>video.canPlayType testing page</title>
 
+    <script type="text/javascript" src="http://ajax.googleapis.com/ajax/libs/jquery/1.6.1/jquery.min.js"></script> 
     <script type="text/javascript" src="../../mwEmbedLoader.php"></script> 
     <!--  
     <script type="text/javascript" src="http://html5.kaltura.org/js" > </script>
