--- a/tests/qunit/EmbedSourcesCopy.html
+++ b/tests/qunit/EmbedSourcesCopy.html
@@ -3,9 +3,7 @@
 <head>
 	
 	<link rel="stylesheet" href="http://code.jquery.com/qunit/git/qunit.css" type="text/css" media="screen" />
-	<!--[if lt IE 9]>
-	<script src="http://html5shim.googlecode.com/svn/trunk/html5.js"></script>
-	<![endif]-->
+
 	<script src="http://code.jquery.com/jquery-latest.js"></script>
 	<script type="text/javascript" src="http://code.jquery.com/qunit/git/qunit.js"></script>
 	<script type="text/javascript" src="http://staging.html5video.org/testswarm/js/inject.js"></script>
@@ -29,7 +27,7 @@ $(document).ready(function(){
 </script>
 </head>
 <body>
-	<h1 id="qunit-header">Embed Player Sources (shimmed)</h1>
+	<h1 id="qunit-header">Embed Player Sources</h1>
 	<h2 id="qunit-banner"></h2>
 	<div id="qunit-testrunner-toolbar"></div>
 	<h2 id="qunit-userAgent"></h2>
