renamed queue function to queueQunitTest
git-svn-id: http://www.kaltura.org/kalorg/html5video/trunk/mwEmbed@2175 b58a29cf-3064-46da-94c6-1c29cc75c8e5

--- a/modules/KalturaSupport/tests/DynamicKEntryId.html
+++ b/modules/KalturaSupport/tests/DynamicKEntryId.html
@@ -52,7 +52,7 @@ function dynamicKEntryTests() {
 	
 };
 
-queueTest( function(){
+queueQunitTest( function(){
 	mw.ready( function() {
 		$('#showVideo').click();		
 		setTimeout( function(){
