--- a/modules/KalturaSupport/tests/iFrameFallforward.html
+++ b/modules/KalturaSupport/tests/iFrameFallforward.html
@@ -1,12 +1,25 @@
 <html>
 <head>
 <title>Fall forward Iframe</title>
-
-<script type="text/javascript" src="../../../mwEmbedLoader.php?debug=true"></script>
+<script type="text/javascript" src="../../../tests/qunit/qunit-bootstrap.js"></script>
+<script type="text/javascript" src="../../../mwEmbedLoader.php"></script>
 
 <script type="text/javascript">		
 	mw.setConfig('EmbedPlayer.EnableIpadHTMLControls', true);
 	mw.setConfig( 'Kaltura.IframeRewrite', true );
+</script>
+<script type="text/javascript">		
+QUnit.start();	
+module("Dynamic Kaltura Entry Player");
+
+test("is embedded", function() {
+	notEqual( $('.mv-player').width(), null );
+	notEqual( $('.mwplayer_interface').width(), null );
+});
+
+test("is skinned", function() {
+	notEqual( $('.play-btn-large').width(), null );
+});
 </script>
 </head>
 <body>
