Added module names to unit test names
git-svn-id: http://www.kaltura.org/kalorg/html5video/trunk/mwEmbed@2178 b58a29cf-3064-46da-94c6-1c29cc75c8e5

--- a/modules/KalturaSupport/tests/DynamicKEntryId.html
+++ b/modules/KalturaSupport/tests/DynamicKEntryId.html
@@ -40,7 +40,7 @@ mw.ready( function(){
 if( window.QUnit ){
 	window.testingPlayerReadyCB = function(){		
 		QUnit.start();	
-		module("Dynamic Kaltura Entry Player");
+		module("Dynamic K-Entry Player");
 	
 		test("is embedded", function() {
 			notEqual( $('.mv-player').width(), null );
