added tests for iframeFallForward
git-svn-id: http://www.kaltura.org/kalorg/html5video/trunk/mwEmbed@2180 b58a29cf-3064-46da-94c6-1c29cc75c8e5

--- a/modules/KalturaSupport/tests/DynamicKEntryId.html
+++ b/modules/KalturaSupport/tests/DynamicKEntryId.html
@@ -40,14 +40,14 @@ mw.ready( function(){
 if( window.QUnit ){
 	window.testingPlayerReadyCB = function(){		
 		QUnit.start();	
-		module("Dynamic K-Entry Player");
+		module("K-Entry Player");
 	
 		test("is embedded", function() {
 			notEqual( $('.mv-player').width(), null );
 			notEqual( $('.mwplayer_interface').width(), null );
 		});
 	
-		test("is skinned", function() {
+		test("has play button", function() {
 			notEqual( $('.play-btn-large').width(), null );
 		});
 	}
