updated iframe example to include one more test
git-svn-id: http://www.kaltura.org/kalorg/html5video/trunk/mwEmbed@2181 b58a29cf-3064-46da-94c6-1c29cc75c8e5

--- a/modules/KalturaSupport/tests/iFrameFallforward.html
+++ b/modules/KalturaSupport/tests/iFrameFallforward.html
@@ -37,9 +37,11 @@ if( window.QUnit ){
 		asyncTest("Iframe config", function(){
 			equal( iframeContext.mw.getConfig('Kaltura.IframeRewrite' ), false, "Kaltura.IframeRewrite" ); 
 			equal( iframeContext.mw.getConfig('Mw.LogPrepend'), 'iframe:', "Mw.LogPrepend ");
+			// Test page context config: 
+			equal( iframeContext.mw.getConfig('EmbedPlayer.EnableIpadHTMLControls'), true, 'EmbedPlayer.EnableIpadHTMLControls' );
 			start();
 		});
-		
+
 	}
 	
 	// We may make this part of the framework.. but kind of tricky given diffrent loading types
