--- a/modules/KalturaSupport/tests/KdpApiGoogleAnalytics.html
+++ b/modules/KalturaSupport/tests/KdpApiGoogleAnalytics.html
@@ -5,11 +5,11 @@
 
 <script type="text/javascript" src="https://ajax.googleapis.com/ajax/libs/jquery/1.4.2/jquery.js"></script>
 <script src="http://cdn.kaltura.org/apis/seo/flashembed.js"></script>
-<script type="text/javascript" src="../../../../mwEmbedLoader.php"></script>
+<script type="text/javascript" src="../../../mwEmbedLoader.php"></script>
 <script type="text/javascript">
 	mw.setConfig( 'EmbedPlayer.EnableIframeApi', true );
 </script>
-<script type="text/javascript" src="kGoogleAnalytics.js?7"></script>
+<script type="text/javascript" src="resources/kGoogleAnalytics.js"></script>
 <script type="text/javascript">
 
   var _gaq = _gaq || [];
